# subgrounds

./: .buildinfo  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  index.html  objects.inv  pyproject.toml  searchindex.js
.github/workflows/: build-docs.yml  docs.yml  main.yml
_sources/: examples.md.txt
_static/: documentation_options.js
advanced/: index.html
api/subgrounds/: index.html
api/subgrounds.client/: index.html
api/subgrounds.dash_wrappers/: index.html
api/subgrounds.dataframe_utils/: index.html
api/subgrounds.pagination/: index.html
api/subgrounds.pagination.pagination/: index.html
api/subgrounds.pagination.preprocess/: index.html
api/subgrounds.pagination.strategies/: index.html
api/subgrounds.pagination.utils/: index.html
api/subgrounds.plotly_wrappers/: index.html
api/subgrounds.query/: index.html
api/subgrounds.schema/: index.html
api/subgrounds.subgraph/: index.html
api/subgrounds.subgraph.fieldpath/: index.html
api/subgrounds.subgraph.filter/: index.html
api/subgrounds.subgraph.object/: index.html
api/subgrounds.subgraph.subgraph/: index.html
api/subgrounds.subgrounds/: index.html
api/subgrounds.transform/: index.html
api/subgrounds.utils/: index.html
basics/: index.html
contributing/: index.html
data/: curve_swaps.parquet
examples/: README.md  aave_v2.py  bar_chart.py  curve.py  gateway.ipynb  index.html  live_indicator.py  notebook.ipynb  olympus_dashboard.py  olympus_voting.py  table.py  uniswapv2_firehose.py
examples/dash_apps/: README.md  bar_chart.py  dashboard.py  double_query.py  indicator.py  indicator2.py  live_indicator.py  olympus_dashboard.py  olympus_voting.py  synthetic_fields.py  table.py  uniswapv2_firehose.py
genindex/: index.html
getting_started/: index.html
modules/: index.html
py-modindex/: index.html
search/: index.html
subgrounds/: __init__.py  client.py  dash_wrappers.py  dataframe_utils.py  errors.py  plotly_wrappers.py  query.py  schema.py  subgrounds.py  transform.py  utils.py
subgrounds/client/: __init__.py  async_.py  asynch.py  base.py  sync.py
subgrounds/contrib/: README.md  pyodide.py
subgrounds/contrib/dash/: __init__.py  abcs.py  components.py
subgrounds/contrib/plotly/: __init__.py  figure.py  traces.py
subgrounds/contrib/polars/: __init__.py  client.py  polars_client.py  test_download.py  test_force_numeric.py  test_int_overflow.py  test_polars_client.py  test_utils.py  utils.py
subgrounds/pagination/: __init__.py  pagination.py  preprocess.py  strategies.py  utils.py
subgrounds/resources/: introspection.graphql
subgrounds/subgraph/: __init__.py  fieldpath.py  filter.py  object.py  subgraph.py
subgrounds/transform/: __init__.py  abcs.py  apply.py  defaults.py  transforms.py  utils.py
tests/: conftest.py  queries.py  test_dataframe_utils.py  test_execute.py  test_fieldpath.py  test_null_filter.py  test_query.py  test_schema.py  test_subgraph.py  test_toplevel.py  test_transform.py
tests/contrib/polars/: test_client.py
tests/mock_server/: Dockerfile  usdc.graphql
tests/pagination/: test_preprocess.py  test_strategies.py  test_utils.py
tests/unittests/: test_dataframe_utils.py  test_query.py  test_toplevel.py  test_utils.py
tests/unittests/pagination/: test_preprocess.py  test_utils.py
troubleshooting/: index.html
