[tool.poetry]
name = "subgrounds"
version = "1.5.0"
description = "A Pythonic data access layer for applications querying data from The Graph Network."
authors = [
    "cvauclair <cvauclair@playgrounds.network>",
    "0xMochan <mochan@playgrounds.network>",
]
repository = "https://github.com/0xPlaygrounds/subgrounds"

readme = "README.md"
keywords = ["graph", "subgrounds", "graphql", "subgraph"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pandas = "^1.4.2"
pipe = "^2.0"
pydantic = "^1.10.2"
dash = { version = "^2.3.1", optional = true }
plotly = { version = "^5.14.1", optional = true }
pyodide-http = { version = "^0.2.1", optional = true }

[tool.poetry.extras]
dash = ["dash"]
plotly = ["plotly"]
pyodide = ["pyodide-http"]
all = ["dash", "plotly", "pyodide-http"]

# https://python-poetry.org/docs/managing-dependencies/#dependency-groups
[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
deepdiff = "^6.2.1"                 # used for debugging data structures
ipykernel = "^6.13.0"
mypy = "^0.950"
python-semantic-release = "^7.33.1"
ruff = "^0.0.253"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
pytest-insta = "^0.2.0"
graphene = "^3.2.2"

[tool.poe.tasks]
format = { shell = "black subgrounds examples tests" }
check = { shell = "black subgrounds examples tests --check; ruff check subgrounds examples tests" }
develop = { shell = "mudkip develop" }
test = "pytest"
generate-api-docs = { shell = "sphinx-apidoc --output docs/api subgrounds --separate --force" }

[tool.semantic_release]
branch = "main"
upload_to_pypi = true
version_variable = ["subgrounds/__init__.py:__version__"]
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = false
build_command = "poetry build"

[tool.ruff]

[tool.ruff.per-file-ignores]
"subgrounds/plotly_wrappers" = ["F405", "F403"]
"subgrounds/dash_wrappers" = ["F405", "F403"]

[tool.pytest.ini_options]
testpaths = ["tests/unittests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
